--- a/eyes.html
+++ b/eyes.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Eyes with Css</title>
+    <title>İntro with Css</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
  
     <link
